--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "css-loader": "^7.1.1",
+    "file-loader": "^6.2.0",
+    "style-loader": "^4.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
-    "css-loader": "^7.1.1",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
-    "file-loader": "^6.2.0",
     "globals": "^15.1.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.2.5",
-    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
