--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.1.0",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.2.5",
     "webpack": "^5.91.0",
